# Paperfessor

./: .env.example  .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
Skill/coder/: 01-read-the-guide.md  02-write-clean-code.md  03-handle-datasets.md  04-debug-without-burning-time.md  05-toolbelt-and-organization.md
Skill/doc/: 01-read-the-soul.md  02-check-archive-first.md  03-write-the-paper.md  04-supervise-and-handle-intervention.md  05-delegation-map.md  06-learning-memory.md
Skill/researcher/: 01-search-beyond-arxiv.md  02-read-papers-rigorously.md  03-merge-into-survey.md  04-handle-conflicts.md  05-integration-for-paper.md  06-venue-requirements.md  07-scope-of-work.md  08-broad-cross-discipline-sources.md
Skill/shared/: 01-prompt-engineering-foundation.md  02-stage-handoff-protocol.md  03-filesystem-discipline-on-minimax.md  04-memory-discipline.md
assets/: draw_mascot.py
docs/ar/: README.md
docs/de/: README.md
docs/en/: README.md
docs/es/: README.md
docs/fr/: README.md
docs/it/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/pt/: README.md
docs/ru/: README.md
docs/zh-CN/: README.md
paperfessor/: __init__.py  __main__.py  _meta.py  config.py  memory.py  monitor.py  policy.py  prompting.py  skills.py  workspace.py  workspace_reset.py
paperfessor/agents/: __init__.py  base.py  master.py  phd.py  status.py  undergrad.py
paperfessor/cli/: app.py  display.py
paperfessor/gui/: __init__.py  app.py
paperfessor/i18n/: __init__.py
paperfessor/i18n/locales/: en.json  ja.json  zh-CN.json
paperfessor/llm/: __init__.py  base.py  discovery.py  providers.py  router.py  security.py
paperfessor/research/: experiments.py  figures.py  latex.py  private_datasets.py  venues.py  visual_inspect.py  web.py
paperfessor/research/sources/: __init__.py  arxiv.py  crossref.py  oa.py  openalex.py  s2.py  venue_index.py
paperfessor/runner/: __init__.py  pipeline.py
scripts/: test_loop.ps1
src/: __init__.py  __main__.py  config.py  memory.py  monitor.py  paths.py  prompting.py  skills.py  workspace.py  workspace_reset.py
src/agents/: __init__.py  base.py  master.py  phd.py  undergrad.py
src/cli/: __init__.py  app.py  display.py
src/gui/: __init__.py  app.py  theme.py
src/i18n/: __init__.py
src/llm/: __init__.py  providers.py  router.py  security.py
src/research/: __init__.py  datasets.py  experiments.py  figures.py  latex.py  pdf_loader.py  venues.py  visual_inspect.py
src/research/sources/: openalex.py
src/runner/: pipeline.py
tests/: test_doc_learn.py  test_latex_render.py  test_pipeline_guards.py  test_private_datasets.py  test_prompting.py  test_providers.py  test_self_inspection.py  test_ug_toolbelt.py  test_workspace_reset.py
workspace/paper/: README.md
workspace/src/: README.md
