[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "paperfessor"
version = "0.4.0"
description = "Multi-agent research direction -> top-innovation paper + runnable code project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paperfessor Project" },
]
keywords = [
    "ai", "agent", "research", "paper", "paperfessor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "keyring>=24.3.0",
    "platformdirs>=4.2.0",
    "PyYAML>=6.0.1",
    "cryptography>=42.0.0",
    "tenacity>=8.2.3",
    "jinja2>=3.1.3",
    "tiktoken>=0.7.0",
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
paperfessor = "src.cli.app:app"
paperfessor-gui = "src.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/i18n/locales" = "i18n/locales"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "workspace",
    "Skill",
    "SOUL.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
